Fix: body overflow on X axis

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,7 @@ body {
   color: white;
   font-family: Roboto, "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  overflow-x: hidden;
 }
 
 *,
